# bjarne_stroustrup_exercises

./: CMakeLists.txt  readme.md
chapter3/: q10.cpp  q11.cpp  q2.cpp  q3.cpp  q4.cpp  q5.cpp  q6.cpp  q7.cpp  q8.cpp  q9.cpp
chapter4/: q11.cpp  q13.cpp  q2.cpp  q3.cpp  q4.cpp  q5.cpp  q8.cpp
chapter5/: q11.cpp  q14.cpp  q7.cpp
