cmake_minimum_required(VERSION 3.15)
project(bjarne_stroustrup_exercises)

set(CMAKE_CXX_STANDARD 14)

add_executable(c3q2 chapter3/q2.cpp)
add_executable(c3q3 chapter3/q3.cpp)
add_executable(c3c4 chapter3/q4.cpp)
add_executable(c3c5 chapter3/q5.cpp)
add_executable(c3c6 chapter3/q6.cpp)
add_executable(c3c7 chapter3/q7.cpp)
add_executable(c3c8 chapter3/q8.cpp)