cmake_minimum_required(VERSION 3.15)
project(bjarne_stroustrup_exercises)

set(CMAKE_CXX_STANDARD 14)

add_executable(c3q2 chapter3/q2.cpp)
add_executable(c3q3 chapter3/q3.cpp)
add_executable(c3c4 chapter3/q4.cpp)
add_executable(c3c5 chapter3/q5.cpp)
add_executable(c3c6 chapter3/q6.cpp)
add_executable(c3c7 chapter3/q7.cpp)
add_executable(c3c8 chapter3/q8.cpp)
add_executable(c3c9 chapter3/q9.cpp)
add_executable(c3c10 chapter3/q10.cpp)
add_executable(c3c11 chapter3/q11.cpp)

add_executable(c4q2 chapter4/q2.cpp)
add_executable(c4q3 chapter4/q3.cpp)
add_executable(c4q4 chapter4/q4.cpp)
add_executable(c4q5 chapter4/q5.cpp)