cmake_minimum_required(VERSION 3.15)
project(bjarne_stroustrup_exercises)

set(CMAKE_CXX_STANDARD 14)

add_executable(c3q2 chapter3/q2.cpp)
add_executable(c3q3 chapter3/q3.cpp)
add_executable(c3q4 chapter3/q4.cpp)
add_executable(c3q5 chapter3/q5.cpp)
add_executable(c3q6 chapter3/q6.cpp)
add_executable(c3q7 chapter3/q7.cpp)
add_executable(c3q8 chapter3/q8.cpp)
add_executable(c3q9 chapter3/q9.cpp)
add_executable(c3q10 chapter3/q10.cpp)
add_executable(c3q11 chapter3/q11.cpp)

add_executable(c4q2 chapter4/q2.cpp)
add_executable(c4q3 chapter4/q3.cpp)
add_executable(c4q4 chapter4/q4.cpp)
add_executable(c4q5 chapter4/q5.cpp)
add_executable(c4q8 chapter4/q8.cpp)
add_executable(c4q11 chapter4/q11.cpp)
add_executable(c4q13 chapter4/q13.cpp)

add_executable(c5q7 chapter5/q7.cpp)
add_executable(c5q11 chapter5/q11.cpp)
add_executable(c5q14 chapter5/q14.cpp)